--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,10 @@ body {
 .transglobeMap,
 #map-wrapper,
 #map {
-    height: 100%;        
+    height: 100%;
 }
 .language-label {
+    font-size: 16px;
     overflow: visible;
 }
 .translation-container {
