--- a/css/style.css
+++ b/css/style.css
@@ -15,16 +15,22 @@ body {
     width: 100%;
 }
 
-.navbar-header .info-sign {
-    color: #999999;
-    float: right;
-    height: 50px;
-    line-height: 20px;
-    padding: 15px 0;
+.navbar-header .tooltip {
+    font-size: 13px;
+    max-width: 85px;
 }
 
-.navbar-header .info-sign:hover {
-    color: #EEEEEE;
+.navbar-header .tooltip-inner {
+    line-height: 1.7em;
+    padding-top: 0.8em;
+    padding-bottom: 0.8em;
+}
+
+.navbar-header .github-ribbon {
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    z-index: 10;
 }
 
 #map-wrapper {
