Don't let inner elements overflow the body

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 html,
 body {
     height: 100%;
-    margin: 0;        
+    margin: 0;  
+    overflow: hidden;      
 }
 .navbar-custom {
     border-radius: 0;
